// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom include 1`] = `
Array [
  "Test App ßW Setup 1.1.0.exe",
]
`;

exports[`custom include 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;

exports[`custom script 1`] = `
Array [
  "Test App ßW Setup 1.1.0.exe",
]
`;

exports[`custom script 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;

exports[`file associations only perMachine 1`] = `"Please set perMachine to true — file associations works on Windows only if installed for all users"`;

exports[`menuCategory 1`] = `
Array [
  "Test Menu Category CustomName 1.1.0.exe",
]
`;

exports[`menuCategory 2`] = `
Array [
  "test-menu-category-Setup-1.1.0.exe",
]
`;

exports[`one-click 1`] = `
Array [
  "Test App ßW Setup 1.1.0.exe",
]
`;

exports[`one-click 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;

exports[`one-click 3`] = `
Object {
  "owner": "actperepo",
  "package": "TestApp",
  "provider": "bintray",
}
`;

exports[`perMachine, no run after finish 1`] = `
Array [
  "TestApp Setup 1.1.0.exe",
  "latest.yml",
]
`;

exports[`perMachine, no run after finish 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;

exports[`perMachine, no run after finish 3`] = `
Object {
  "provider": "generic",
  "url": "https://develar.s3.amazonaws.com/test/win",
}
`;

exports[`perMachine, no run after finish 4`] = `
Object {
  "githubArtifactName": "TestApp-Setup-1.1.0.exe",
  "path": "TestApp Setup 1.1.0.exe",
  "version": "1.1.0",
}
`;

exports[`web installer 1`] = `
Array [
  "Test App ßW Web Setup 1.1.0.exe",
  "TestApp-1.1.0-x64.nsis.7z",
  "latest.yml",
  "latest.yml",
]
`;

exports[`web installer 2`] = `
Array [
  "TestApp-Web-Setup-1.1.0.exe",
]
`;
